k8s/base/networkpolicy/allow-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
spec:
  podSelector: 
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - port: 80
